syntax = "proto3";
package pb;
import "game_code.proto";
import "game_pub.proto";
import "game_type.proto";

// 心跳
message CPing
{
    int64 time = 1;//时间截
}

message SPing
{
    int64 time = 1;//时间截
    ErrCode error= 2;//错误码 ,0:正常
}

// 获取玩家的数据
message CUserData
{
    string userid = 1;//用户id
}

message SUserData
{
    UserData userInfo = 1; //个人信息
    ErrCode error = 2;//错误码
}

// 玩家的关卡数据
message CGateData
{
}

message SGateData
{
    repeated GateData gateInfo = 1; //关卡信息
    ErrCode error = 2;//错误码
}

// 玩家的道具数据
message CPropData
{
}

message SPropData
{
    repeated PropData propInfo = 1; //道具信息
    ErrCode error = 2;//错误码
}

// 主动获取虚拟货币
message CGetCurrency
{
}

message SGetCurrency
{
    int64 coin     = 1;//金币
    int64 diamond  = 2;//钻石
    int64 energy   = 3;//精力
}

// 推送变更货币数量
message SPushCurrency
{
    LogType type   = 1;//类型
    int64 coin     = 2;//金币
    int64 diamond  = 3;//钻石
    int64 energy   = 4;//精力
}

// 推送变更道具数量
message SPushProp
{
    LogType type   = 1;//类型
    PropType ptype = 2;//类型
    int32 num      = 3;//数量
}
